<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnEXE1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EXE1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/btnEXE2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EXE2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEXE1" />

    <Button
        android:id="@+id/btnEXE3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EXE3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEXE2" />

    <Button
        android:id="@+id/btnEXE4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EXE4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEXE3" />

    <Button
        android:id="@+id/btnEXE5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EXE5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEXE4" />

</android.support.constraint.ConstraintLayout>