<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgTruck"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="124dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/ic_truck"/>

    <CheckBox
        android:id="@+id/radRun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginTop="66dp"
        android:text="@string/radRun"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgTruck" />

    <CheckBox
        android:id="@+id/radRotate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="66dp"
        android:text="@string/radRotate"
        app:layout_constraintStart_toEndOf="@+id/radRun"
        app:layout_constraintTop_toBottomOf="@+id/imgTruck" />

    <Button
        android:id="@+id/btnAnimate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="52dp"
        android:background="@android:color/transparent"
        android:text="@string/btnAnimate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radRun" />
</android.support.constraint.ConstraintLayout>