<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="411dp"
        android:layout_height="237dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <fragment
            android:id="@+id/fragmentswicth"
            android:name="tdc.edu.vn.exesum.FragmentTitleImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

   <ImageButton
        android:id="@+id/ic_prev"
        style="@style/prevstyle"
        android:layout_width="88dp"
        android:layout_height="60dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="280dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
       android:layout_marginLeft="28dp" />

    <ImageButton
        android:id="@+id/ic_play"
        style="@style/playstyle"
        android:layout_width="88dp"
        android:layout_height="60dp"
        android:layout_marginTop="280dp"
        app:layout_constraintStart_toEndOf="@+id/ic_prev"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ic_stop"
        android:layout_width="88dp"
        android:layout_height="60dp"
        android:layout_marginTop="280dp"
        style="@style/stopstyle"
        app:layout_constraintStart_toEndOf="@+id/ic_play"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ic_next"
        style="@style/nextstyle"
        android:layout_width="88dp"
        android:layout_height="60dp"
        android:layout_marginTop="280dp"
        app:layout_constraintStart_toEndOf="@+id/ic_stop"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="352dp"
        android:layout_height="19dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStartTime" />

    <TextView
        android:id="@+id/tvStartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="238dp"
        android:text="@string/tvStartTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvEndTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="298dp"
        android:layout_marginTop="238dp"
        android:text="@string/tvStartTime"
        app:layout_constraintStart_toEndOf="@+id/tvStartTime"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnEditLyrics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:background="@android:color/transparent"
        android:text="@string/btnEditLyrics"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic_prev" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/conEditZone"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEditLyrics">

        <EditText
            android:id="@+id/txtLyrics"
            android:layout_width="352dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="264dp"
            android:background="@android:color/transparent"
            android:text="@string/btnCancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtLyrics" />
    </android.support.constraint.ConstraintLayout>

    <ScrollView
        android:id="@+id/scrList"
        android:layout_width="match_parent"
        android:layout_height="227dp"
        android:layout_marginTop="112dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEditLyrics">

        <ListView
            android:id="@+id/lstMusic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </ListView>
    </ScrollView>
</android.support.constraint.ConstraintLayout>